@@ -357,6 +357,21 @@ Change the hint matching algorithm during hint mode. Possible values:
 ____
 
 
+|\'fh'| |\'followhints'|
+||'followhints' 'fh'|| number (default: 0)
+____
+
+Change the function of hitting [m]<Return>[m] in hint mode. Possible values:
+
+`---------`----------------------------------------------------------------------------------------------------------------------------------------------------------
+*0*       Default behavior. Link is followed as soon as text uniquely identifies it. Pressing [m]<Return>[m] follows the tab selected hint (if any) or the first link.
+*1*       Like 0, but don't follow link automatically if text has uniquely identified it.
+*2*       Like 1, but don't follow first link if there are more than 1 possibilities.
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------
+
+____
+
+
 |\'ht'| |\'hinttags'|
 ||'hinttags' 'ht'|| string
 ____
